name:                scheduler
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/scheduler#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library 
  exposed-modules:   Scheduler
  hs-source-dirs:    src  
  default-language:  Haskell2010  
  build-depends:     base ==4.8.*
                   , time ==1.5.*
                   , transformers ==0.4.*
                   , mtl ==2.2.*
                   , split ==0.2.*
                   , containers ==0.5.*
